[gd_scene load_steps=19 format=2]

[ext_resource path="res://Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Palete.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sounds/hit2.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/hit1.wav" type="AudioStream" id=6]
[ext_resource path="res://SoundManager.gd" type="Script" id=7]
[ext_resource path="res://sounds/hit4.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/explosion1.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/explosion2.wav" type="AudioStream" id=10]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://VictoryScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Music/main.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=20]
size = 30
font_data = ExtResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 1 )]
max_y_speed = 1

[node name="player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 27.4387, 297.382 )
scale = Vector2( 20, 200 )
speed = 900
palete_width = 200

[node name="player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 995.337, 293.476 )
scale = Vector2( 20, 200 )
player_no = 2
speed = 900
palete_width = 200

[node name="Player1Score" type="Label" parent="."]
margin_left = 40.0
margin_top = -1.0
margin_right = 68.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -83.0
margin_right = -55.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallPosition" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="speed" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Ready" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.88776
margin_top = -45.1478
margin_right = 205.888
margin_bottom = 3.85217
custom_fonts/font = SubResource( 1 )
text = "not ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Player1Ready"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.13266
margin_top = -78.8217
margin_right = 208.133
margin_bottom = -29.8217
custom_fonts/font = SubResource( 2 )
text = "(Press E)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Ready" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 814.023
margin_top = -53.3092
margin_right = 1018.02
margin_bottom = -4.3092
custom_fonts/font = SubResource( 1 )
text = "not ready"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Player2Ready"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.73669
margin_top = -81.3663
margin_right = 208.737
margin_bottom = -32.3663
custom_fonts/font = SubResource( 3 )
text = "(press Enter)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="SoundManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Hit1" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="Hit2" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 5 )

[node name="Hit3" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 8 )

[node name="Hit4" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="Explosion1" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 9 )

[node name="Explosion2" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 10 )

[node name="Hit7" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="Hit8" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="Hit9" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 6 )

[node name="PauseMenu" parent="." instance=ExtResource( 11 )]
visible = false

[node name="GameInfo" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 19 )
text = "First to 10 Wins!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryScreen" parent="." instance=ExtResource( 12 )]
visible = false

[node name="KeyToPause" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.5
margin_top = -37.0
margin_right = 130.5
custom_fonts/font = SubResource( 20 )
text = "Hit Esc to pause"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="bounce" from="Ball" to="." method="_on_Ball_bounce"]
[connection signal="bounce" from="Ball" to="SoundManager" method="hit_sfx"]
[connection signal="score" from="Ball" to="." method="_on_Ball_score"]
[connection signal="deflect" from="player1" to="Ball" method="_on_Palete_body_entered"]
[connection signal="deflect" from="player2" to="Ball" method="_on_Palete_body_entered"]
